--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,10 @@
-<div class="container mx-auto">
-  <p>home works!</p>
+<div class="container mx-auto sm:pt-5">
 
-  <div class="flex flex-row">
-    <div class="basis-3/4 bg-">
+  <div class="flex flex-row gap-4">
+    <div class="basis-4/6 bg-">
       <datosGeneralesComponent/>
     </div>
-    <div class="basis-1/4 bg">
+    <div class="basis-2/6 bg- ">
       <fotoComponent />
     </div>
   </div>
