--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,44 +2,35 @@
 <div class="bg-sky-100 flex justify-center items-center h-screen">
   <!-- Left: Image -->
   <div class="w-1/2 h-screen hidden lg:block">
-    <img src="https://img.freepik.com/fotos-premium/imagen-fondo_910766-187.jpg?w=826" alt="Placeholder Image"
+    <img src="./assets/img/bgtisalogin.png" alt="Placeholder Image"
       class="object-cover w-full h-full">
   </div>
   <!-- Right: Login Form -->
   <div class="lg:p-36 md:p-52 sm:20 p-8 w-full lg:w-1/2">
-    <img src="./assets/img/Logo Tisa y Asitencia Social.png" alt="Logo">
-    <h1 class="text-2xl font-semibold mb-4">Iniciar Sesión</h1>
+    <img src="./assets/img/Logo Tisa y Asitencia Social.png" class="mb-2" alt="Logo">
+    <h1 class="text-3xl text-[#414141] mb-4">Iniciar Sesión</h1>
     <form action="#" method="POST">
       <!-- Username Input -->
       <div class="mb-4 bg-sky-100">
-        <label for="username" class="block text-gray-600">Username</label>
+        <label for="username" class="block text-gray-600">Correo Electronico</label>
         <input type="text" id="username" name="username"
           class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
           autocomplete="off">
       </div>
       <!-- Password Input -->
       <div class="mb-4">
-        <label for="password" class="block text-gray-800">Password</label>
+        <label for="password" class="block text-gray-800">Contraseña</label>
         <input type="password" id="password" name="password"
           class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
           autocomplete="off">
       </div>
-      <!-- Remember Me Checkbox -->
-      <div class="mb-4 flex items-center">
-        <input type="checkbox" id="remember" name="remember" class="text-red-500">
-        <label for="remember" class="text-green-900 ml-2">Remember Me</label>
-      </div>
-      <!-- Forgot Password Link -->
-      <div class="mb-6 text-blue-500">
-        <a href="#" class="hover:underline">Forgot Password?</a>
-      </div>
       <!-- Login Button -->
       <button type="submit"
-        class="bg-red-500 hover:bg-blue-600 text-white font-semibold rounded-md py-2 px-4 w-full">Login</button>
+        class="bg-[#f2660c] hover:bg-[#143b8d] text-white font-semibold rounded-md py-2 px-4 w-full">Entrar</button>
     </form>
     <!-- Sign up  Link -->
-    <div class="mt-6 text-green-500 text-center">
-      <a href="#" class="hover:underline">Sign up Here</a>
+    <div class="mt-6 text-[#143b8d] text-center">
+      <a href="#" class="hover:underline">Registrate</a>
     </div>
   </div>
 </div>
