Mejorar la funcionalidad de captura de fotos y actualizar el diseño de la interfaz de usuario

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="container mx-auto sm:pt-5">
 
   <div class="flex flex-row gap-4">
-    <div class="basis-4/6 bg-">
+    <div class="basis-5/8 ">
       <datosGeneralesComponent/>
     </div>
-    <div class="basis-2/6 bg- ">
+    <div class="basis-3/8  ">
       <fotoComponent />
     </div>
   </div>
