--- a/src/app/pages/home/components/foto/foto.component.html
+++ b/src/app/pages/home/components/foto/foto.component.html
@@ -1,33 +1,46 @@
-<div class="bg-gray-100">
-  <div class="py-2 bg-white border-0 shadow-lg sm:rounded-3xl">
+<div class="flex flex-row gap-4">
+  <div class="basis-4/5 bg-gray-100">
+    <div class="py-2 bg-white border-0 shadow-lg sm:rounded-3xl">
 
-    <div class="flex flex-col items-center p-4  ">
-      <!-- Camera device selection -->
-      <select [(ngModel)]="selectedDevice" (ngModelChange)="startStream()" class="w-full p-2 mb-4 border rounded-lg">
-        <option value="">Select a camera</option>
-        <option *ngFor="let device of devices; let i = index" [value]="device.deviceId">
-          {{ device.label || 'Camera ' + (i + 1) }}
-        </option>
-      </select>
+      <div class="flex flex-col items-center p-4  ">
+        <!-- Camera device selection -->
+        <select [(ngModel)]="selectedDevice" (ngModelChange)="startStream()" class="w-full p-2 mb-4 border rounded-lg">
+          <option value="">Select a camera</option>
+          <option *ngFor="let device of devices; let i = index" [value]="device.deviceId">
+            {{ device.label || 'Camera ' + (i + 1) }}
+          </option>
+        </select>
 
-      <!-- Camera video stream -->
-      <div class="relative w-full aspect-video bg-gray-200 rounded-lg overflow-hidden mb-4">
-        <video #videoElement autoplay playsinline class="w-full h-full object-cover"></video>
-        @if (stream) {
-        <div class="absolute top-2 right-2 w-3 h-3 bg-red-500 rounded-full animate-ping"></div>
-        }
-      </div>
-
-      <!-- Captured image -->
-      <div class="w-full aspect-square bg-gray-100 rounded-lg overflow-hidden mb-4">
-        @if (capturedImage) {
-        <img [src]="capturedImage" alt="Captured photo" class="w-full h-full object-cover">
-        } @else {
-        <div class="w-full h-full flex items-center justify-center text-gray-400">
-          Foto no capturada
+        <!-- Camera video stream -->
+        <div class="relative w-full aspect-video bg-gray-200 rounded-lg overflow-hidden mb-4">
+          <video #videoElement autoplay playsinline class="w-full h-full object-cover"></video>
+          @if (stream) {
+          <div class="absolute top-2 right-2 w-3 h-3 bg-red-500 rounded-full animate-ping"></div>
+          }
         </div>
-        }
+
+        <!-- Captured image -->
+        <div class="w-full aspect-square bg-gray-100 rounded-lg overflow-hidden mb-4">
+          @if (capturedImage) {
+          <img [src]="capturedImage" alt="Captured photo" class="w-full h-full object-cover">
+          } @else {
+          <div class="w-full h-full flex items-center justify-center text-gray-400">
+            Foto no capturada
+          </div>
+          }
+        </div>
+
+
+
+        <!-- Hidden canvas for capturing photos -->
+        <canvas #canvas hidden></canvas>
       </div>
+
+    </div>
+  </div>
+
+  <div class="basis-1/5 bg-gray-100">
+    <div class="py-2 bg-white border-0 shadow-lg sm:rounded-3xl px-2">
 
       <!-- Capture button -->
       <button (click)="capturePhoto()" [disabled]="!stream"
@@ -45,8 +58,8 @@
 
       <!-- Image format toggle -->
       <button (click)="toggleImageFormat()"
-        class="w-full bg-purple-500 hover:bg-purple-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-purple-500 mb-4">
-        Toggle format: {{ imageFormat.toUpperCase() }}
+        class="w-full bg-purple-500 hover:bg-purple-600 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:ring-2 focus:ring-purple-500 mb-4">
+        Formato: {{ imageFormat.toUpperCase() }}
       </button>
 
       <!-- Download button -->
@@ -66,11 +79,7 @@
         Registrar
       </button>
 
-      <!-- Hidden canvas for capturing photos -->
-      <canvas #canvas hidden></canvas>
+
     </div>
-
-
-
   </div>
 </div>
