Agregar componentes de menú y pie de página, y crear página de consulta

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto sm:pt-5">
+<div class="pt-5 mb-10 h-screen container mx-auto">
 
   <div class="flex flex-row gap-4">
     <div class="basis-4/8 ">
@@ -9,3 +9,4 @@
     </div>
   </div>
 </div>
+
