--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 
-<div class="bg-gray-100 ">
+<div class="min-h-screen bg-gray-100 ">
   <router-outlet/>
+  <footerComponent/>
 </div>
+<menuComponent/>
