--- a/src/app/pages/home/components/foto/foto.component.html
+++ b/src/app/pages/home/components/foto/foto.component.html
@@ -1,8 +1,8 @@
-<div class="flex flex-row gap-4">
-  <div class="basis-4/5 bg-gray-100">
-    <div class="py-2 bg-white border-0 shadow-lg sm:rounded-3xl">
+<div class="flex flex-col xl:flex-row gap-4">
+  <div class="basis-full xl:basis-5/6 bg-gray-100">
+    <div class="bg-white border-0 shadow-lg sm:rounded-3xl">
 
-      <div class="flex flex-col items-center p-4  ">
+      <div class="flex flex-col items-center p-4">
         <!-- Camera device selection -->
         <select [(ngModel)]="selectedDevice" (ngModelChange)="startStream()" class="w-full p-2 mb-4 border rounded-lg">
           <option value="">Select a camera</option>
@@ -20,7 +20,7 @@
         </div>
 
         <!-- Captured image -->
-        <div class="w-full aspect-square bg-gray-100 rounded-lg overflow-hidden mb-4">
+        <div class="w-2xs aspect-square bg-gray-100 rounded-lg overflow-hidden xl:mb-4">
           @if (capturedImage) {
           <img [src]="capturedImage" alt="Captured photo" class="w-full h-full object-cover">
           } @else {
@@ -39,13 +39,13 @@
     </div>
   </div>
 
-  <div class="basis-1/5 bg-gray-100">
-    <div class="py-2 bg-white border-0 shadow-lg sm:rounded-3xl px-2">
+  <div class="basis-full xl:basis-1/6 bg-gray-100">
+    <div class="py-2 flex gap-2 items-center flex-row justify-between xl:flex-col bg-white border-0 shadow-lg sm:rounded-3xl px-2">
 
       <!-- Capture button -->
       <button (click)="capturePhoto()" [disabled]="!stream"
-        class="rounded-full w-16 h-16 mb-4 bg-white hover:bg-gray-100 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+        class="rounded-full w-16 h-16 xl:mb-4 bg-[#f26507]  border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="white"
           class="w-8 h-8 text-gray-800 mx-auto">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
             d="M3 9a2 2 0 012-2h.93a2 2 0 001.664-.89l.812-1.22A2 2 0 0110.07 4h3.86a2 2 0 011.664.89l.812 1.22A2 2 0 0018.07 7H19a2 2 0 012 2v9a2 2 0 01-2 2H5a2 2 0 01-2-2V9z">
@@ -57,25 +57,24 @@
       </button>
 
       <!-- Image format toggle -->
-      <button (click)="toggleImageFormat()"
-        class="w-full bg-purple-500 hover:bg-purple-600 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:ring-2 focus:ring-purple-500 mb-4">
-        Formato: {{ imageFormat.toUpperCase() }}
-      </button>
+      <!-- <button (click)="toggleImageFormat()"
+        class="w-[60px] h-[60px]  flex flex-col items-center justify-center bg-purple-500 hover:bg-purple-600 text-white text-xs font-bold p-2 rounded-full focus:outline-none focus:ring-2 focus:ring-purple-500 xl:mb-4">
+        <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-switch-2"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 17h5l1.67 -2.386m3.66 -5.227l1.67 -2.387h6" /><path d="M18 4l3 3l-3 3" /><path d="M3 7h5l7 10h6" /><path d="M18 20l3 -3l-3 -3" /></svg>
+        {{ imageFormat.toUpperCase() }}
+      </button> -->
 
       <!-- Download button -->
-      <button (click)="downloadPhoto()" [disabled]="!capturedImage"
-        class="w-full bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-green-500 mb-4 disabled:opacity-50 disabled:cursor-not-allowed">
-        Download Photo ({{ imageFormat.toUpperCase() }})
-      </button>
+      <!-- <button (click)="downloadPhoto()" [disabled]="!capturedImage"
+        class="rounded-full w-[60px] h-[60px] flex flex-col items-center justify-center bg-green-500 hover:bg-green-600 text-xs text-white font-bold p-2 focus:outline-none focus:ring-2 focus:ring-green-500 xl:mb-4 disabled:opacity-50 disabled:cursor-not-allowed">
+        <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="#ffffff"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-download"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2" /><path d="M7 11l5 5l5 -5" /><path d="M12 4l0 12" /></svg>
+        Descargar
+        ({{ imageFormat.toUpperCase() }})
+      </button> -->
 
       <!-- Register button -->
       <button (click)="register()" [disabled]="!capturedImage"
-        class="w-full bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-          class="w-4 h-4 inline-block mr-2">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M8 7H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-3m-1 4l-3 3m0 0l-3-3m3 3V4"></path>
-        </svg>
+        class="rounded-full w-full  flex flex-col items-center justify-center bg-blue-500 hover:bg-blue-600 text-xs text-white text-center font-bold p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
+        <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right-to-arc"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 12h12" /><path d="M11 8l4 4l-4 4" /><path d="M12 21a9 9 0 0 0 0 -18" /></svg>
         Registrar
       </button>
 
