--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -3,7 +3,7 @@
   <div class="text-center">
     <p>
       Copyright © 2025 -
-      <a class="font-semibold" href="mailto:m.sohanemon@gmail.com"
+      <a class="font-semibold" target="_blank" href="https://tarjetasintegrales.mx/"
         >Tarjetas Integrales S.A. de C.V.</a
       >
     </p>
