--- a/src/app/pages/home/components/foto/foto.component.html
+++ b/src/app/pages/home/components/foto/foto.component.html
@@ -1,5 +1,5 @@
-<div class="flex flex-col xl:flex-row gap-4">
-  <div class="basis-full xl:basis-5/6 bg-gray-100">
+<div class="flex flex-col gap-4">
+  <div class="basis-full bg-gray-100">
     <div class="bg-white border-0 shadow-lg sm:rounded-3xl">
 
       <div class="flex flex-col items-center p-4">
@@ -20,7 +20,7 @@
         </div>
 
         <!-- Captured image -->
-        <div class="w-2xs aspect-square bg-gray-100 rounded-lg overflow-hidden xl:mb-4">
+        <div class="w-2xs aspect-square bg-gray-100 rounded-lg overflow-hidden ">
           @if (capturedImage) {
           <img [src]="capturedImage" alt="Captured photo" class="w-full h-full object-cover">
           } @else {
@@ -39,12 +39,12 @@
     </div>
   </div>
 
-  <div class="basis-full xl:basis-1/6 bg-gray-100">
-    <div class="py-2 flex gap-2 items-center flex-row justify-between xl:flex-col bg-white border-0 shadow-lg sm:rounded-3xl px-2">
+  <div class="basis-full bg-gray-100">
+    <div class="py-2 flex gap-2 items-center flex-row justify-between  bg-white border-0 shadow-lg sm:rounded-3xl px-2">
 
       <!-- Capture button -->
       <button (click)="capturePhoto()" [disabled]="!stream"
-        class="rounded-full w-16 h-16 xl:mb-4 bg-[#f26507]  border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
+        class="rounded-full w-16 h-16  bg-[#f26507]  border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="white"
           class="w-8 h-8 text-gray-800 mx-auto">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -73,7 +73,7 @@
 
       <!-- Register button -->
       <button (click)="register()" [disabled]="!capturedImage"
-        class="rounded-full w-full  flex flex-col items-center justify-center bg-blue-500 hover:bg-blue-600 text-xs text-white text-center font-bold p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
+        class="rounded-full w-3/4 flex flex-col items-center justify-center bg-blue-500 hover:bg-blue-600 text-xs text-white text-center font-bold p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
         <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right-to-arc"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 12h12" /><path d="M11 8l4 4l-4 4" /><path d="M12 21a9 9 0 0 0 0 -18" /></svg>
         Registrar
       </button>
