--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,7 @@
 <div class="min-h-screen bg-gray-100 ">
   <router-outlet/>
   <footerComponent/>
+  
+  <app-network-status></app-network-status>
 </div>
 <menuComponent/>
