--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -9,23 +9,33 @@
   <div class="lg:p-36 md:p-52 sm:20 p-8 w-full lg:w-1/2">
     <img src="./assets/img/Logo Tisa y Asitencia Social.png" class="mb-2" alt="Logo">
     <h1 class="text-3xl text-[#414141] mb-4">Iniciar Sesión</h1>
-    <form action="#" method="POST">
+    <form [formGroup]="loginForm" (ngSubmit)="login()">
       <!-- Username Input -->
       <div class="mb-4 bg-sky-100">
         <label for="username" class="block text-gray-600">Correo Electronico</label>
-        <input type="text" id="username" name="username"
+        <input type="text" id="username" name="username" formControlName="email"
           class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
           autocomplete="off">
+        <div *ngIf="loginForm.get('email')?.invalid && (loginForm.get('email')?.dirty || loginForm.get('email')?.touched)"
+          class="text-red-500 text-sm mt-1">
+          <div *ngIf="loginForm.get('email')?.errors?.['required']">El correo electrónico es requerido.</div>
+          <div *ngIf="loginForm.get('email')?.errors?.['email']">El correo electrónico no es válido.</div>
+        </div>
       </div>
       <!-- Password Input -->
       <div class="mb-4">
         <label for="password" class="block text-gray-800">Contraseña</label>
-        <input type="password" id="password" name="password"
+        <input type="password" id="password" name="password" formControlName="password"
           class="w-full border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-blue-500"
           autocomplete="off">
+        <div *ngIf="loginForm.get('password')?.invalid && (loginForm.get('password')?.dirty || loginForm.get('password')?.touched)"
+          class="text-red-500 text-sm mt-1">
+          <div *ngIf="loginForm.get('password')?.errors?.['required']">La contraseña es requerida.</div>
+          <div *ngIf="loginForm.get('password')?.errors?.['minlength']">La contraseña debe tener al menos 6 caracteres.</div>
+        </div>
       </div>
       <!-- Login Button -->
-      <button type="submit"
+      <button type="submit" [disabled]="loginForm.invalid || loading"
         class="bg-[#f2660c] hover:bg-[#143b8d] text-white font-semibold rounded-md py-2 px-4 w-full">Entrar</button>
     </form>
     <!-- Sign up  Link -->
