Se agrega el cerrar sesion

--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -11,7 +11,7 @@
           class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 rounded-md">Registro</a>
         <a (click)="menuShow = false" routerLink="/consulta" routerLinkActive="bg-[#f26507]/50"
           class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 rounded-md">Consulta</a>
-        <a (click)="menuShow = false" routerLink="/login" routerLinkActive="bg-[#f26507]/50"
+        <a (click)="cerrarSesion()" routerLinkActive="bg-[#f26507]/50"
           class="block px-4 py-2 text-sm text-red-500 hover:bg-red-100 rounded-md">Cerrar Sesión</a>
       </div>
 
