Inserta los codigos postales en la base de datos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,15 @@
-
 <div class="min-h-screen bg-gray-100 ">
-  <router-outlet/>
-  <footerComponent/>
-  
+  <router-outlet />
+  <footerComponent />
+
+  @for (item of codigos; track item.cp) {
+  <li>{{ item.cp }}</li>
+  } @empty {
+  <li>No hay codigos en la base de datos.</li>
+  }
+
+  <span>{{ codigos }}</span>
+
   <app-network-status></app-network-status>
 </div>
-<menuComponent/>
+<menuComponent />
