--- a/src/app/pages/home/components/datos-generales/datos-generales.component.html
+++ b/src/app/pages/home/components/datos-generales/datos-generales.component.html
@@ -58,19 +58,22 @@
             }
           </mat-select>
         </mat-form-field>
-        <mat-form-field class="basis-1/3 ">
+
+        <mat-form-field class="basis-1/3">
           <mat-label>Municipio</mat-label>
-          <mat-select [(ngModel)]="selectedValue" name="food">
-            @for (food of foods; track food) {
-            <mat-option [value]="food.value">{{food.viewValue}}</mat-option>
-            }
+          <mat-select [(ngModel)]="municipio" name="municipio" (selectionChange)="getCodigosPostales({municipio: $event.value})">
+            <mat-option *ngFor="let municipio of municipios" [value]="municipio.municipio">
+              {{ municipio.municipio }}
+            </mat-option>
           </mat-select>
         </mat-form-field>
+
+
         <mat-form-field class="basis-1/3 ">
-          <mat-label>Codigo Postal</mat-label>
-          <mat-select [(ngModel)]="selectedValue" name="food">
-            @for (food of foods; track food) {
-            <mat-option [value]="food.value">{{food.viewValue}}</mat-option>
+          <mat-label>Código Postal</mat-label>
+          <mat-select [(ngModel)]="selectedValue" name="cp">
+            @for (cp of codigosPostales; track cp) {
+            <mat-option [value]="cp.cp">{{cp.cp}}</mat-option>
             }
           </mat-select>
         </mat-form-field>
