--- a/src/app/pages/home/components/foto/foto.component.html
+++ b/src/app/pages/home/components/foto/foto.component.html
@@ -12,7 +12,7 @@
         </select>
 
         <!-- Camera video stream -->
-        <div class="relative w-full aspect-video bg-gray-200 rounded-lg overflow-hidden mb-4">
+        <div class="relative w-full h-[244px] aspect-video bg-gray-200 rounded-lg overflow-hidden mb-4">
           <video #videoElement autoplay playsinline class="w-full h-full object-cover"></video>
           @if (stream) {
           <div class="absolute top-2 right-2 w-3 h-3 bg-red-500 rounded-full animate-ping"></div>
@@ -40,7 +40,7 @@
   </div>
 
   <div class="basis-full bg-gray-100">
-    <div class="py-2 flex gap-2 items-center flex-row justify-between  bg-white border-0 shadow-lg sm:rounded-3xl px-2">
+    <div class="py-2 flex gap-2 items-center flex-row justify-left  bg-white border-0 shadow-lg sm:rounded-3xl px-2">
 
       <!-- Capture button -->
       <button (click)="capturePhoto()" [disabled]="!stream"
