--- a/src/app/pages/consulta/consulta.component.html
+++ b/src/app/pages/consulta/consulta.component.html
@@ -56,7 +56,7 @@
         <!-- Fecha de nacimiento -->
         <ng-container matColumnDef="fecha_nacimiento">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de nacimiento</th>
-          <td mat-cell *matCellDef="let row"> {{row.fecha_nacimiento}} </td>
+          <td mat-cell *matCellDef="let row"> {{row.fecha_nacimiento | date:'dd/MM/yyyy'}} </td>
         </ng-container>
 
         <!-- Estado -->
@@ -92,7 +92,7 @@
         <!-- Fecha de registro -->
         <ng-container matColumnDef="fecha_evento">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de registro</th>
-          <td mat-cell *matCellDef="let row"> {{row.fecha_evento}} </td>
+          <td mat-cell *matCellDef="let row"> {{row.fecha_evento | date:'dd/MM/yyyy'}} </td>
         </ng-container>
 
         <!-- Acciones -->
@@ -102,8 +102,8 @@
             <div
               class="flex justify-end items-center gap-2 *:flex *:justify-center *:items-center *:rounded-full *:p-2">
 
-              <button mat-button color="danger">Eliminar</button>
-              <button mat-button color="warn">Editar</button>
+              <button mat-button color="primary">Editar</button>
+              <button mat-button color="accent">Eliminar</button>
             </div>
           </td>
         </ng-container>
@@ -116,10 +116,9 @@
           <td class="mat-cell p-5" colspan="4">No hay coincidencias</td>
         </tr>
       </table>
-
-      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
     </div>
 
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
   </div>
 
 
