--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,11 +1,15 @@
 <!-- component -->
 <footer class="footer footer-center w-full p-4 bg-gray-300 text-gray-800">
+  <div>
+    <p class="text-center">
+      Usuario - {{user}}
+    </p>
+  </div>
   <div class="text-center">
     <p>
-      Copyright © 2025 -
-      <a class="font-semibold" target="_blank" href="https://tarjetasintegrales.mx/"
-        >Tarjetas Integrales S.A. de C.V.</a
-      >
+      Copyright © {{ currentYear }} -
+      <a class="font-semibold" target="_blank" href="https://tarjetasintegrales.mx/">Tarjetas Integrales S.A. de
+        C.V.</a>
     </p>
   </div>
 </footer>
