--- a/src/app/pages/home/components/foto/foto.component.html
+++ b/src/app/pages/home/components/foto/foto.component.html
@@ -12,7 +12,7 @@
         </select>
 
         <!-- Camera video stream -->
-        <div class="relative w-full aspect-video bg-gray-200 rounded-lg overflow-hidden mb-4">
+        <div class="relative w-full h-[244px] aspect-video bg-gray-200 rounded-lg overflow-hidden mb-4">
           <video #videoElement autoplay playsinline class="w-full h-full object-cover"></video>
           @if (stream) {
           <div class="absolute top-2 right-2 w-3 h-3 bg-red-500 rounded-full animate-ping"></div>
@@ -40,7 +40,7 @@
   </div>
 
   <div class="basis-full bg-gray-100">
-    <div class="py-2 flex gap-2 items-center flex-row justify-between  bg-white border-0 shadow-lg sm:rounded-3xl px-2">
+    <div class="py-2 flex gap-2 items-center flex-row justify-left  bg-white border-0 shadow-lg sm:rounded-3xl px-2">
 
       <!-- Capture button -->
       <button (click)="capturePhoto()" [disabled]="!stream"
@@ -72,12 +72,11 @@
       </button> -->
 
       <!-- Register button -->
-      <button (click)="register()" [disabled]="!capturedImage"
+      <button (click)="onSubmit()" [disabled]="!capturedImage"
         class="rounded-full w-3/4 flex flex-col items-center justify-center bg-blue-500 hover:bg-blue-600 text-xs text-white text-center font-bold p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
         <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right-to-arc"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 12h12" /><path d="M11 8l4 4l-4 4" /><path d="M12 21a9 9 0 0 0 0 -18" /></svg>
         Registrar
       </button>
-
 
     </div>
   </div>
