Se guarda las fotos de los aspirantes en la ruta especificada

--- a/src/app/pages/consulta/consulta.component.html
+++ b/src/app/pages/consulta/consulta.component.html
@@ -4,7 +4,7 @@
     <div class="flex items-center justify-between">
       <mat-form-field>
         <mat-label>CURP: </mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="EJ. ABCD123456HDFRLL01" #input>
+        <input matInput (keyup)="applyFilter($event)" placeholder="RACW050729MMCSHNA2" #input>
       </mat-form-field>
 
       <button
