Se ajusta el diseño del formulario de Datos Generales y se optimiza el manejo de la subida de fotos, incluyendo la inyección del servicio de fotos y la gestión del último ID.

--- a/src/app/pages/home/components/datos-generales/datos-generales.component.html
+++ b/src/app/pages/home/components/datos-generales/datos-generales.component.html
@@ -1,9 +1,9 @@
 <div class="bg-gray-100 p-0">
   <div class="px-6 py-5 bg-white border-0 shadow-lg sm:rounded-3xl">
 
-    <h2 class="text-3xl">Datos Generales</h2>
+    <!-- <h2 class="text-3xl">Datos Generales</h2> -->
 
-    <form [formGroup]="myForm" class="my-6">
+    <form [formGroup]="myForm" class="my-2">
 
       <div class="flex flex-row gap-2">
 
