--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="pt-5 mb-10 h-screen max-w-[80rem] container mx-auto">
+<div class="pt-5 mb-4 container mx-auto">
   <div class="flex flex-row gap-4">
     <div class="basis-6/8 ">
       <datosGeneralesComponent #datosForm />
